php/php.editor/test/unit/data/testfiles/verification/IncorrectStaticContextHintError/testStaticClosureAndArrowFunctionInTrait.php.testStaticClosureAndArrowFunctionInTrait.hints
            echo $this->test; // error
                 -----
HINT:Cannot use "$this" in static context.
            echo $this->test; // error
                 -----
HINT:Cannot use "$this" in static context.
                        $this->test; // error
                        -----
HINT:Cannot use "$this" in static context.
                            $this->test; // error
                            -----
HINT:Cannot use "$this" in static context.
                    $this->method(); // error
                    -----
HINT:Cannot use "$this" in static context.
        $arrowFunction = fn() => $this; // error
                                 -----
HINT:Cannot use "$this" in static context.
        $staticArrowFunction = static fn() => $this; // error
                                              -----
HINT:Cannot use "$this" in static context.
                $this->test; // error
                -----
HINT:Cannot use "$this" in static context.
            echo $this->test; // error
                 -----
HINT:Cannot use "$this" in static context.
                $this->test; // error
                -----
HINT:Cannot use "$this" in static context.
                        $this->test; // error
                        -----
HINT:Cannot use "$this" in static context.
                            $this->test; // error
                            -----
HINT:Cannot use "$this" in static context.
                    $this->method(); // error
                    -----
HINT:Cannot use "$this" in static context.
            $nestedArrow = fn() => $this; // error
                                   -----
HINT:Cannot use "$this" in static context.
        $staticArrowFunction = static fn() => $this; // error
                                              -----
HINT:Cannot use "$this" in static context.
                    $this->test; // error
                    -----
HINT:Cannot use "$this" in static context.
                        $this->test; // error
                        -----
HINT:Cannot use "$this" in static context.
                $this->method(); // error
                -----
HINT:Cannot use "$this" in static context.
